clean up; removal of unused code; fix some IDE-suggested warnings